resolves alignment issue with search submit

--- a/src/scss/modules/component/search/_search.scss
+++ b/src/scss/modules/component/search/_search.scss
@@ -14,6 +14,7 @@ search
 	background: $WHITE;
 	width: 100%;
 	padding: 20px 55px 20px 20px; // extra right padding makes room for absolutely positioned button
+	margin: 0;
 	border: 1px solid $GREY_MEDIUM;
 	font-size: 15px;
 	font-family: $FONT_HEADLINE;
