--- a/web/css/modern.css
+++ b/web/css/modern.css
@@ -666,6 +666,7 @@ search
   background: #f1eeea;
   width: 100%;
   padding: 20px 55px 20px 20px;
+  margin: 0;
   border: 1px solid #bbbbbb;
   font-size: 15px;
   font-family: "Liberator", sanserif;
